# cpp-tree-sitter

./: .clang-format  .gitignore  .runsettings  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: copy_helper.cmake  get_cpm.cmake  grammar.cmake  utils.cmake
include/: cpp-tree-sitter.hpp
tests/: CMakeLists.txt  Iterators-tests.cpp  basic-tests.cpp  language-tests.cpp  node-tests.cpp  parser-tests.cpp  pch.hpp  query-tests.cpp  tests.cpp  tree-cursor-tests.cpp  tree-tests.cpp  visitor-tests.cpp  wasm-tests.cpp
